@startuml

title __LIGHTS's Class Diagram__\n

  package sample {
    package sample.model.node {
      package sample.model.node.lights {
        class TrafficLightsHolder {
            {static} - lights : Map<NodeId, TrafficLightsNode>
            {static} + changeLight()
            {static} + addTrafficLight()
            {static} + clear()
        }
      }
    }
  }
  

  package sample {
    package sample.model.node {
      package sample.model.node.lights {
        class TrafficLightsNode {
            - isGreen : Boolean
            + changeLight()
            - greenLight()
            - redLight()
            - changeFields()
            - iterate()
            + TrafficLightsNode()
            {static} + builder()
        }
      }
    }
  }
  

  package sample {
    package sample.model.node {
      package sample.model.node.lights {
        class TrafficLightsNodeBuilder {
            - isTaken : Boolean
            - maxSpeedAllowed : Double
            ~ TrafficLightsNodeBuilder()
            + type()
            + id()
            + isTaken()
            + neighbors()
            + maxSpeedAllowed()
            + position()
            + carId()
            + direction()
            + build()
            + toString()
        }
      }
    }
  }
  

  TrafficLightsNode -up-|> Node
  TrafficLightsNode +-down- TrafficLightsNodeBuilder
  TrafficLightsNodeBuilder o-- NodeType : type
  TrafficLightsNodeBuilder o-- NodeId : id
  TrafficLightsNodeBuilder o-- Neighbors : neighbors
  TrafficLightsNodeBuilder o-- NodePosition : position
  TrafficLightsNodeBuilder o-- CarId : carId
  TrafficLightsNodeBuilder o-- NodeDirection : direction


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
